// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AdminDashboard > opens emergency modal when button is clicked 1`] = `
"<div class="p-8 space-y-6">
  <!-- Header and Emergency Button -->
  <div class="flex justify-between items-center">
    <h1 class="text-2xl font-bold">Admin Dashboard</h1><button type="button" class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm shadow-sm text-white dark:text-gray-900 bg-red-500 hover:bg-red-600 disabled:bg-red-500 aria-disabled:bg-red-500 dark:bg-red-400 dark:hover:bg-red-500 dark:disabled:bg-red-400 dark:aria-disabled:bg-red-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-500 dark:focus-visible:outline-red-400 inline-flex items-center px-4 py-2 gap-2">
      <!--v-if--><span class="">Push Emergency Notice</span>
      <!--v-if-->
    </button>
  </div><!-- Stat Cards -->
  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Today's Bookings</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">5</p>
      </div>
      <!--v-if-->
    </div>
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Pending Approvals</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">2</p>
      </div>
      <!--v-if-->
    </div>
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Facilities Under Maintenance</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">1</p>
      </div>
      <!--v-if-->
    </div>
  </div><!-- Emergency Message Display -->
  <!--v-if-->
  <!-- Emergency Modal -->
  <!--teleport start-->
  <!--teleport end-->
  <div hidden="" style="position: fixed; height: 0px; padding: 0px; overflow: hidden; clip: rect(0, 0, 0, 0); white-space: nowrap; border-width: 0px; display: none;"></div>
</div>"
`;

exports[`AdminDashboard > renders correctly with stats 1`] = `
"<div class="p-8 space-y-6">
  <!-- Header and Emergency Button -->
  <div class="flex justify-between items-center">
    <h1 class="text-2xl font-bold">Admin Dashboard</h1><button type="button" class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm shadow-sm text-white dark:text-gray-900 bg-red-500 hover:bg-red-600 disabled:bg-red-500 aria-disabled:bg-red-500 dark:bg-red-400 dark:hover:bg-red-500 dark:disabled:bg-red-400 dark:aria-disabled:bg-red-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-500 dark:focus-visible:outline-red-400 inline-flex items-center px-4 py-2 gap-2">
      <!--v-if--><span class="">Push Emergency Notice</span>
      <!--v-if-->
    </button>
  </div><!-- Stat Cards -->
  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Today's Bookings</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">5</p>
      </div>
      <!--v-if-->
    </div>
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Pending Approvals</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">2</p>
      </div>
      <!--v-if-->
    </div>
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Facilities Under Maintenance</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">1</p>
      </div>
      <!--v-if-->
    </div>
  </div><!-- Emergency Message Display -->
  <!--v-if-->
  <!-- Emergency Modal -->
  <!---->
</div>"
`;

exports[`AdminDashboard > renders emergency message when present 1`] = `
"<div class="p-8 space-y-6">
  <!-- Header and Emergency Button -->
  <div class="flex justify-between items-center">
    <h1 class="text-2xl font-bold">Admin Dashboard</h1><button type="button" class="focus:outline-none disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:cursor-not-allowed aria-disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm shadow-sm text-white dark:text-gray-900 bg-red-500 hover:bg-red-600 disabled:bg-red-500 aria-disabled:bg-red-500 dark:bg-red-400 dark:hover:bg-red-500 dark:disabled:bg-red-400 dark:aria-disabled:bg-red-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-500 dark:focus-visible:outline-red-400 inline-flex items-center px-4 py-2 gap-2">
      <!--v-if--><span class="">Push Emergency Notice</span>
      <!--v-if-->
    </button>
  </div><!-- Stat Cards -->
  <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Today's Bookings</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">10</p>
      </div>
      <!--v-if-->
    </div>
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Pending Approvals</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">3</p>
      </div>
      <!--v-if-->
    </div>
    <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow bg-white dark:bg-gray-900">
      <div class="px-4 py-5 sm:px-6">
        <p class="text-gray-500">Facilities Under Maintenance</p>
      </div>
      <div class="px-4 py-5 sm:p-6">
        <p class="text-4xl font-bold text-center">2</p>
      </div>
      <!--v-if-->
    </div>
  </div><!-- Emergency Message Display -->
  <div class="rounded-lg divide-y divide-gray-200 dark:divide-gray-800 ring-1 ring-gray-200 dark:ring-gray-800 shadow dark:bg-gray-900 border border-red-300 bg-red-50">
    <div class="px-4 py-5 sm:px-6">
      <h2 class="text-lg font-bold text-red-700">🚨 Emergency Message</h2>
    </div>
    <div class="px-4 py-5 sm:p-6">
      <p class="text-red-700">Emergency: System maintenance at 5PM</p>
    </div>
    <!--v-if-->
  </div><!-- Emergency Modal -->
  <!---->
</div>"
`;
